fixed favicon not showing up issue also made the nav bar on top of every thing so hover on the nav works now

--- a/style.css
+++ b/style.css
@@ -33,9 +33,11 @@ a {
     top: 0;
     left: 0;
     right: 0;
+    z-index: 7;
 }
 .mobile {
     display: none;
+    z-index: 7;
 }
 a img {
     width: 32px;
@@ -63,7 +65,7 @@ a {
     color: white;
 }
 
-.right a:hover {
+a:hover {
     color: #1affa3;
 }
 li a {
